force-app/main/default/objects/Connects_Worker_Time__c/Connects_Worker_Time__c.object-meta.xml
<CustomObject>
    <label>Connects Timesheet</label>
    <nameField>
        <displayFormat>ConnectsTime-{00000}</displayFormat>
        <label>Connects Timesheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connects Timesheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>