force-app/main/default/objects/Connects_Worker_Time__c/fields/Active_Rate_Set__c.field-meta.xml
<CustomField>
    <fullName>Active_Rate_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Active Rate Set</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Connects Timesheets</relationshipLabel>
    <relationshipName>Connects_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>