force-app/main/default/objects/Connects_Worker_Time__c/fields/Activities_Performed__c.field-meta.xml
<CustomField>
    <fullName>Activities_Performed__c</fullName>
    <label>Activities Performed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>