force-app/main/default/objects/Connects_Worker_Time__c/fields/Department_Code__c.field-meta.xml
<CustomField>
    <fullName>Department_Code__c</fullName>
    <formula>if ( isblank( Send_Out_Employment__r.Organization_TCP__r.ParentId ), Send_Out_Employment__r.Organization_TCP__r.Department_Code__c , Send_Out_Employment__r.Organization_TCP__r.Parent.Department_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>