force-app/main/default/objects/Connects_Worker_Time__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Connects Timesheets</relationshipLabel>
    <relationshipName>Connects_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>