force-app/main/default/objects/Connects_Worker_Time__c/fields/Dimension_3__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 3</label>
    <referenceTo>c2g__codaDimension3__c</referenceTo>
    <relationshipLabel>Connects Timesheets</relationshipLabel>
    <relationshipName>Connects_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>