force-app/main/default/objects/Connects_Worker_Time__c/fields/Dimension_3_Formula__c.field-meta.xml
<CustomField>
    <fullName>Dimension_3_Formula__c</fullName>
    <formula>if ( Organization_Customer__r.Name = &quot;Cara Chicago&quot;, &apos;a8o0Z000000blJYQAY&apos;,

Send_Out_Employment__r.Organization_TCP__r.c2g__CODADimension3__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimension 3 Formula</label>
    <type>Text</type>
</CustomField>