force-app/main/default/objects/Connects_Worker_Time__c/fields/File_Number__c.field-meta.xml
<CustomField>
    <fullName>File_Number__c</fullName>
    <formula>Send_Out_Employment__r.Case_Record__r.Main_Client__r.ADP_File_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Number</label>
    <type>Text</type>
</CustomField>