force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_ADP_Time_Out_1__c.field-meta.xml
<CustomField>
    <fullName>Friday_ADP_Time_Out_1__c</fullName>
    <formula>if (isblank( Friday_Lunch_Start__c )
|| Friday_Lunch_End_Proxy__c &lt;= Friday_Time_In_Proxy__c
|| Friday_Lunch_Start_Proxy__c &lt;= Friday_Time_In_Proxy__c , Friday_Time_Out__c ,
if (Friday_Lunch_Start_Proxy__c &lt;= Friday_Time_Out_Proxy__c , Friday_Lunch_Start__c ,
Friday_Time_Out__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friday ADP Time Out (#1)</label>
    <type>Text</type>
</CustomField>