force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_ADP_Time_Out_2__c.field-meta.xml
<CustomField>
    <fullName>Friday_ADP_Time_Out_2__c</fullName>
    <formula>if (isblank( Friday_Lunch_Start__c ), &quot;No Lunch&quot;,
if ( Friday_Lunch_Start_Proxy__c &gt;= Friday_Time_Out_Proxy__c
|| Friday_Lunch_End_Proxy__c &gt;= Friday_Time_Out_Proxy__c
|| Friday_Lunch_Start_Proxy__c &lt;= Friday_Time_In_Proxy__c, &quot;Lunch Out of Range&quot;,
Friday_Time_Out__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friday ADP Time Out (#2)</label>
    <type>Text</type>
</CustomField>