force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_Date__c.field-meta.xml
<CustomField>
    <fullName>Friday_Date__c</fullName>
    <formula>Week_Beginning__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friday Date</label>
    <type>Date</type>
</CustomField>