force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_Lunch_End__c.field-meta.xml
<CustomField>
    <fullName>Friday_Lunch_End__c</fullName>
    <label>Friday Lunch End</label>
    <length>8</length>
    <type>Text</type>
</CustomField>