force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_Time_1__c.field-meta.xml
<CustomField>
    <fullName>Friday_Time_1__c</fullName>
    <formula>if ( isblank( Friday_Time_In__c) &amp;&amp; isblank ( Friday_Time_Out__c), 0,

if ( isblank(Friday_Lunch_End__c) &amp;&amp; isblank(Friday_Lunch_Start__c),

( 

(floor(Friday_Time_Out_Proxy__c) + (Friday_Time_Out_Proxy__c- floor(Friday_Time_Out_Proxy__c))/60*100)

- (floor(Friday_Time_In_Proxy__c) + (Friday_Time_In_Proxy__c- floor(Friday_Time_In_Proxy__c))/60*100)

),

( 

(floor( Friday_Lunch_Start_Proxy__c ) + (Friday_Lunch_Start_Proxy__c  - floor(Friday_Lunch_Start_Proxy__c ))/60*100)

- (floor(Friday_Time_In_Proxy__c) + (Friday_Time_In_Proxy__c- floor(Friday_Time_In_Proxy__c))/60*100)

)

))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friday Time (#1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>