force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Friday_Time_In__c</fullName>
    <label>Friday Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>