force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Friday_Time_Out__c</fullName>
    <label>Friday Time Out</label>
    <length>8</length>
    <type>Text</type>
</CustomField>