force-app/main/default/objects/Connects_Worker_Time__c/fields/Friday_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Friday_Total_Hours__c</fullName>
    <formula>Friday_Time_2__c + Friday_Time_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Friday Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>