force-app/main/default/objects/Connects_Worker_Time__c/fields/Internal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Notes__c</fullName>
    <label>Internal Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>