force-app/main/default/objects/Connects_Worker_Time__c/fields/Last_2_Weeks__c.field-meta.xml
<CustomField>
    <fullName>Last_2_Weeks__c</fullName>
    <formula>if ((today()+7) &lt;= Week_Beginning__c &amp;&amp; Week_Beginning__c &lt;= (today()+14), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last 2 Weeks</label>
    <type>Checkbox</type>
</CustomField>