force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_ADP_Time_In_1__c.field-meta.xml
<CustomField>
    <fullName>Monday_ADP_Time_In_1__c</fullName>
    <formula>if (isblank( Monday_Lunch_Start__c ), Monday_Time_In__c ,
if ( Monday_Lunch_End_Proxy__c &lt;= Monday_Time_In_Proxy__c , Monday_Time_In__c ,
if ( Monday_Lunch_Start_Proxy__c &lt;= Monday_Time_In_Proxy__c , Monday_Lunch_End__c ,
Monday_Time_In__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday ADP Time In (#1)</label>
    <type>Text</type>
</CustomField>