force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_ADP_Time_Out_2__c.field-meta.xml
<CustomField>
    <fullName>Monday_ADP_Time_Out_2__c</fullName>
    <formula>if (isblank( Monday_Lunch_Start__c ), &quot;No Lunch&quot;,
if ( Monday_Lunch_Start_Proxy__c &gt;= Monday_Time_Out_Proxy__c
|| Monday_Lunch_End_Proxy__c &gt;= Monday_Time_Out_Proxy__c
|| Monday_Lunch_Start_Proxy__c &lt;= Monday_Time_In_Proxy__c, &quot;Lunch Out of Range&quot;,
Monday_Time_Out__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday ADP Time Out (#2)</label>
    <type>Text</type>
</CustomField>