force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_Date__c.field-meta.xml
<CustomField>
    <fullName>Monday_Date__c</fullName>
    <formula>Week_Beginning__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday Date</label>
    <type>Date</type>
</CustomField>