force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_Lunch_End__c.field-meta.xml
<CustomField>
    <fullName>Monday_Lunch_End__c</fullName>
    <label>Monday Lunch End</label>
    <length>8</length>
    <type>Text</type>
</CustomField>