force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_Lunch_Start__c.field-meta.xml
<CustomField>
    <fullName>Monday_Lunch_Start__c</fullName>
    <label>Monday Lunch Start</label>
    <length>8</length>
    <type>Text</type>
</CustomField>