force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Monday_Time_2__c</fullName>
    <formula>if (

isblank(Monday_Lunch_End__c) &amp;&amp; isblank(Monday_Lunch_Start__c),

NULL,

(

(floor( Monday_Time_Out_Proxy__c ) + (Monday_Time_Out_Proxy__c - floor(Monday_Time_Out_Proxy__c ))/60*100))

- (floor( Monday_Lunch_End_Proxy__c ) + (Monday_Lunch_End_Proxy__c - floor(Monday_Lunch_End_Proxy__c ))/60*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday Time (#2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>