force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Monday_Time_In__c</fullName>
    <label>Monday Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>