force-app/main/default/objects/Connects_Worker_Time__c/fields/Monday_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monday_Total_Hours__c</fullName>
    <formula>Monday_Time_1__c + Monday_Time_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monday Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>