force-app/main/default/objects/Connects_Worker_Time__c/fields/Organization_Customer__c.field-meta.xml
<CustomField>
    <fullName>Organization_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization (Customer)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Connects Timesheets</relationshipLabel>
    <relationshipName>Connects_Timesheets</relationshipName>
    <type>Lookup</type>
</CustomField>