force-app/main/default/objects/Connects_Worker_Time__c/fields/Reviewed_Approved__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed &amp; Approved</label>
    <type>Checkbox</type>
</CustomField>