force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_ADP_Time_In_1__c.field-meta.xml
<CustomField>
    <fullName>Saturday_ADP_Time_In_1__c</fullName>
    <formula>if (isblank( Saturday_Lunch_Start__c ), Saturday_Time_In__c ,
if ( Saturday_Lunch_End_Proxy__c &lt;= Saturday_Time_In_Proxy__c , Saturday_Time_In__c ,
if ( Saturday_Lunch_Start_Proxy__c &lt;= Saturday_Time_In_Proxy__c , Saturday_Lunch_End__c ,
Saturday_Time_In__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saturday ADP Time In (#1)</label>
    <type>Text</type>
</CustomField>