force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_ADP_Time_Out_1__c.field-meta.xml
<CustomField>
    <fullName>Saturday_ADP_Time_Out_1__c</fullName>
    <formula>if (isblank( Saturday_Lunch_Start__c )
|| Saturday_Lunch_End_Proxy__c &lt;= Saturday_Time_In_Proxy__c
|| Saturday_Lunch_Start_Proxy__c &lt;= Saturday_Time_In_Proxy__c , Saturday_Time_Out__c ,
if (Saturday_Lunch_Start_Proxy__c &lt;= Saturday_Time_Out_Proxy__c , Saturday_Lunch_Start__c ,
Saturday_Time_Out__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saturday ADP Time Out (#1)</label>
    <type>Text</type>
</CustomField>