force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_Date__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Date__c</fullName>
    <formula>Week_Beginning__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saturday Date</label>
    <type>Date</type>
</CustomField>