force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_Lunch_Start__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Lunch_Start__c</fullName>
    <label>Saturday Lunch Start</label>
    <length>8</length>
    <type>Text</type>
</CustomField>