force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_Lunch_Start_Proxy__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Lunch_Start_Proxy__c</fullName>
    <label>Saturday Lunch Start Proxy</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>