force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Time_2__c</fullName>
    <formula>if (

isblank(Saturday_Lunch_End__c) &amp;&amp; isblank(Saturday_Lunch_Start__c),

NULL,

(

(floor( Saturday_Time_Out_Proxy__c ) + (Saturday_Time_Out_Proxy__c - floor(Saturday_Time_Out_Proxy__c ))/60*100))

- (floor( Saturday_Lunch_End_Proxy__c ) + (Saturday_Lunch_End_Proxy__c - floor(Saturday_Lunch_End_Proxy__c))/60*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saturday Time (#2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>