force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Time_In__c</fullName>
    <label>Saturday Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>