force-app/main/default/objects/Connects_Worker_Time__c/fields/Saturday_Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Total_Hours__c</fullName>
    <formula>Saturday_Time_2__c + Saturday_Time_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saturday Total Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>