force-app/main/default/objects/Connects_Worker_Time__c/fields/Send_Out_Employment__c.field-meta.xml
<CustomField>
    <fullName>Send_Out_Employment__c</fullName>
    <label>Send Out / Employment</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipName>Connects_Worker_Time</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>