force-app/main/default/objects/Connects_Worker_Time__c/fields/Sunday_ADP_Time_In_2__c.field-meta.xml
<CustomField>
    <fullName>Sunday_ADP_Time_In_2__c</fullName>
    <formula>if (isblank( Sunday_Lunch_Start__c ), &quot;No Lunch&quot;,
if ( Sunday_Lunch_Start_Proxy__c  &gt;=  Sunday_Time_Out_Proxy__c 
|| Sunday_Lunch_End_Proxy__c  &gt;= Sunday_Time_Out_Proxy__c 
|| Sunday_Lunch_Start_Proxy__c &lt;=  Sunday_Time_In_Proxy__c , &quot;Lunch Out of Range&quot;,
 Sunday_Lunch_End__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday ADP Time In (#2)</label>
    <type>Text</type>
</CustomField>