force-app/main/default/objects/Connects_Worker_Time__c/fields/Sunday_ADP_Time_Out_1__c.field-meta.xml
<CustomField>
    <fullName>Sunday_ADP_Time_Out_1__c</fullName>
    <formula>if (isblank( Sunday_Lunch_Start__c )
|| Sunday_Lunch_End_Proxy__c &lt;=  Sunday_Time_In_Proxy__c 
||  Sunday_Lunch_Start_Proxy__c &lt;= Sunday_Time_In_Proxy__c ,  Sunday_Time_Out__c ,
if (Sunday_Lunch_Start_Proxy__c &lt;= Sunday_Time_Out_Proxy__c , Sunday_Lunch_Start__c ,
Sunday_Time_Out__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday ADP Time Out (#1)</label>
    <type>Text</type>
</CustomField>