force-app/main/default/objects/Connects_Worker_Time__c/fields/Sunday_Date__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Date__c</fullName>
    <formula>Week_Beginning__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday Date</label>
    <type>Date</type>
</CustomField>