force-app/main/default/objects/Connects_Worker_Time__c/fields/Sunday_Lunch_End__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Lunch_End__c</fullName>
    <label>Sunday Lunch End</label>
    <length>8</length>
    <type>Text</type>
</CustomField>