force-app/main/default/objects/Connects_Worker_Time__c/fields/Sunday_Time_2__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Time_2__c</fullName>
    <formula>if (

isblank(Sunday_Lunch_End__c) &amp;&amp; isblank(Sunday_Lunch_Start__c),

NULL,

(

(floor(Sunday_Time_Out_Proxy__c ) + (Sunday_Time_Out_Proxy__c - floor(Sunday_Time_Out_Proxy__c ))/60*100))

- (floor( Sunday_Lunch_End_Proxy__c ) + (Sunday_Lunch_End_Proxy__c - floor(Sunday_Lunch_End_Proxy__c ))/60*100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sunday Time (#2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>