force-app/main/default/objects/Connects_Worker_Time__c/fields/Sunday_Time_Out__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Time_Out__c</fullName>
    <label>Sunday Time Out</label>
    <length>8</length>
    <type>Text</type>
</CustomField>